syntax = "proto3";

package users;

option java_multiple_files = true;
option java_package = "com.ims.grpcdemo";
// option java_outer_classname = "UsersProto";

import "google/protobuf/empty.proto";

// Enum for gender
enum Gender {
  MALE = 0;
  FEMALE = 1;
  OTHER = 2;
}

// Enum for role
enum Role {
  CUSTOMER = 0;
  SUPPLIER = 1;
  IMPORT_MANAGER = 2;
  ADMIN = 3;
}

// The user message containing the user's details.
message User {
  string name = 1;
  string birthday = 2;
  Gender gender = 3;
  string username = 4;
  Role role = 5;
  string email = 6;
  string password = 7;
  string phone = 8;
  string bank_name = 9;
  int64 account_no = 10;
  string company_name = 11;
}

// The request message for login.
message LoginUserRequest {
  string username = 1;
  string password = 2;
}

// The response message for login.
message LoginUserResponse {
  string success = 1;
}

// The request message for signup.
message SignupUserRequest {
  User user = 1;
}

// The response message for signup.
message SignupUserResponse {
  string success = 1;
}

// The error message containing error code and message.
message UserFault {
  int32 code = 1;
  string message = 2;
}

// The Users service definition.
service UsersService {
  // Logs in a user.
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  // Signs up a new user.
  rpc SignupUser(SignupUserRequest) returns (SignupUserResponse);
}